--- a/src/main/webapp/css/mystyle.css
+++ b/src/main/webapp/css/mystyle.css
@@ -1,6 +1,24 @@
-body{
-	background: red;
+#uni{
+	
+	font-family: 'Roboto Mono', monospace;
 }
-.kl{
-	background: #ff80ff;
+
+#name{
+	
+	font-family: 'Patua One', cursive;
+}
+
+#content{
+	font-family: 'Raleway', sans-serif;
+}
+
+
+#font1{
+	font-family: 'Courgette', cursive;
+}
+
+.h-100{
+	
+	height : 100%;
+	width : 100%;
 }
